fix(sign-up): break word in sign-in group to avoid text overflow
#10

--- a/src/components/sign-up/sign-up.scss
+++ b/src/components/sign-up/sign-up.scss
@@ -74,4 +74,20 @@
       margin-bottom: 1rem;
     }
   }
+  &__sign-in-hint,
+  &__button_type_sign-in {
+    word-break: break-word;
+  }
+  &__button_type_sign-in {
+    max-width: 33%;
+    @media (max-width: $screen-xs-max) {
+      max-width: 100%;
+    }
+  }
+  &__sign-in-hint {
+    max-width: 65%;
+    @media (max-width: $screen-xs-max) {
+      max-width: 100%;
+    }
+  }
 }
